--- a/src/index.css
+++ b/src/index.css
@@ -443,12 +443,12 @@ a#site-title:hover {
 #top-container {
   margin: 0 0 0 -1rem;
   width: 100%;
-  background-image: url(src/assets/light_gradient.png);
+  background-image: url(https://raw.githubusercontent.com/maemay85/projectRFB/main/src/assets/light_gradient.png);
   background-size: 99vw 69vw;
   height: 69vw;
 }
 
-/* https://raw.githubusercontent.com/maemay85/projectRFB/main/ */
+/*  */
 
 #top-text-wrapper {
   margin-top: 10vw;
