--- a/src/index.css
+++ b/src/index.css
@@ -190,13 +190,32 @@ img {
 }
 
 .email-form-field select#subject {
+
+  width: 33.278vw;
+  height: 3.778vw;
   font-size: 1.5vw;
   text-align: left;
   padding-left: 2vw;
-  margin-right: 2vw;
   font-family: 'Noto Sans';
   font-weight: 600;
   color: rgba(var(--medium-text), 1);
+}
+
+.email-form-dropdown {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 31vw;
+  border: 1px solid black;
+  color: rgba(var(--medium-text), 1);
+  padding-left: 2vw;
+  border-radius:.5rem;
+  background-color: var(--secondary-background);
+  font-family: 'Noto Sans';
+  font-weight: 600;
+  font-size: 1.5vw;
+  height: 3.778vw;
+  z-index: 2;
 }
 
 .email-form-checkbox {
