changed secondary background color

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ THIS FILE IS ORGANIZED AS FOLLOWS:
   line-height: 1.5;
   font-weight: 400;
   --primary-background: #FAF8F4;
-  --secondary-background: #F2F3E5;
+  --secondary-background: #FAF8F4;
   --color-background: rgba(184, 144, 180, 0.74);
   --bright-pop: #E9F88D;
   --dark-pop: #8A3683;
