changed secondary background color again

--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,8 @@ THIS FILE IS ORGANIZED AS FOLLOWS:
   font-family: 'Noto Sans';
   line-height: 1.5;
   font-weight: 400;
-  --primary-background: #FAF8F4;
-  --secondary-background: #FAF8F4;
+  --primary-background: #FFF;
+  --secondary-background: #FFF;
   --color-background: rgba(184, 144, 180, 0.74);
   --bright-pop: #E9F88D;
   --dark-pop: #8A3683;
